<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main"
    >
  <LinearLayout
      android:id="@+id/button_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="32dp"
      android:layout_marginTop="32dp"
      android:orientation="vertical"
      >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          app:srcCompat="@drawable/ic_user"
          />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="8dp"
        android:text="Example"
        android:textSize="16sp"
        android:textStyle="bold"

        />
    </LinearLayout>

    <Button
        android:id="@+id/class_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_location"
        android:textColor="@color/colorWhite"
        />
    <Button
        android:id="@+id/class_timetable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_timetable"
        android:textColor="@color/colorWhite"
        />
    <Button
        android:id="@+id/my_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_schedule"
        android:textColor="@color/colorWhite"
        />
    <Button
        android:id="@+id/faculty_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faculty_schedule"
        android:textColor="@color/colorWhite"
        />
    <Button
        android:id="@+id/available_faculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available_faculty"
        android:textColor="@color/colorWhite"
        />
    <Button
        android:id="@+id/contact_hod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_hod_s"
        android:textColor="@color/colorWhite"
        />
    <Button
        android:id="@+id/responsibilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/responsibilities"
        android:textColor="@color/colorWhite"
        />

  </LinearLayout>

</android.support.v4.widget.NestedScrollView>
